Add cmake in CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [fpm, meson]
+        build: [cmake, fpm, meson]
         os: [ubuntu-latest, macos-latest, windows-latest]
         gcc: [10] # Version of GFortran we want to use.
         build-type: [debug]
@@ -70,6 +70,16 @@ jobs:
         environment-file: config/ci/${{ matrix.build }}-env.yaml
         extra-specs: |
           ${{ matrix.build-type == 'coverage' && 'gcovr' || '' }}
+
+    - name: Compile (cmake)
+      if: ${{ matrix.build == 'cmake' }}
+      run: |
+        cmake -B build
+        cmake --build build
+
+    - name: Run test (cmake)
+      if: ${{ matrix.build == 'cmake' }}
+      run: cmake --build build --target test
 
     - name: Compile (fpm)
       if: ${{ matrix.build == 'fpm' }}
